<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">
    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/business_number"
        android:hint = "Business Number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint = "Name"
        app:layout_constraintTop_toBottomOf="@+id/business_number"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="e-mail"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/primary_business"
        android:hint = "Primary Business"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:hint = "Address"
        app:layout_constraintTop_toBottomOf="@+id/primary_business"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/province"
        android:hint = "Province"
        app:layout_constraintTop_toBottomOf="@+id/address"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Update Data"
        app:layout_constraintTop_toBottomOf="@+id/province"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:onClick="updateContact"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Erase Contact"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/province"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:onClick="eraseContact"/>



</android.support.constraint.ConstraintLayout>
